--- a/templates/Dash0.html
+++ b/templates/Dash0.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block map %}
 <div id="mapwin" class="innertube">
-    <iframe id="iframe1" src= {{ url_for('thru',path=mapfile) }} width="1200" height="800" onload="fetchTableData('nodelist_xref')"> </iframe>
+    <iframe id="iframe1" src= {{ url_for('thru',path=mapfile) }} width="1200" height="800" onload="refreshTableData('nodelist_xref')"> </iframe>
 </div>
 <style>
   /* Container to align label and switch */
@@ -271,20 +271,10 @@
 <div id="tabletitle" class="innertube">
   <span id="selectedTitle">Table Details</span>
   <select id="tableSelector">
-    <option value="resources">Resources</option>
-    <option value="markerframe">Event Markers</option>
-    <option value="stream_table">Import Data Streams</option>
-    <option value="nodelist_xref">Nodelist xref</option>
-    <option value="nation_layer">Nations</option>
-    <option value="county_layer">Counties</option>
-    <option value="constituency_layer">Constituencies</option>
-    <option value="ward_layer">Wards</option>
-    <option value="division_layer">Divisions</option>
-    <option value="polling_district_layer">Polling Districts</option>
-    <option value="walk_layer">Walks</option>
-    <option value="street_layer">Streets</option>
-    <option value="walkleg_layer">Walklegs</option>
-  </select>
+    {% for key, value in table_types.items() %}
+    <option value="{{ key }}">{{ value }}</option>
+  {% endfor %}
+
 </div>
 
 
@@ -315,12 +305,32 @@
 
 <script>
 
+  function refreshTableData(selectedTable) {
+    window.parent.postMessage({
+    type: "update-table",
+    stable: selectedTable
+    }, "*"); // Replace * with specific origin if needed
+  }
+
+  window.addEventListener("message", function(event) {
+    // optionally check event.origin === "https://yourdomain.com"
+    if (event.data.type === "update-table") {
+        const stable = document.getElementById(event.data.stable);
+        if (stable) {
+            console.log("Received message to updateTable: "+selectedTable);
+            fetchTableData(stable);
+        }
+    }
+});
+
+
   document.getElementById("tableSelector").addEventListener("change", function () {
       const selectedTable = this.value;
 //      const iframe1 = document.getElementById("iframe1");
 //      const iframeWindow = iframe1.contentWindow;
 // Access something in the iframe:
       fetchTableData(selectedTable);
+      console.log("selectedTable:"+selectedTable);
   });
 
   document.getElementById("logout-button").addEventListener("click", function() {
@@ -699,7 +709,7 @@ fetch("/get-constants", { credentials: 'same-origin' })
     if (mapfile) {
       changeIframeSrc(`/thru/${mapfile}`);
     }
-    fetchTableData('nodelist_xref');
+//    fetchTableData('nodelist_xref');
   });
 
   document.addEventListener("DOMContentLoaded", () => {
