--- a/templates/leafletting.html
+++ b/templates/leafletting.html
@@ -75,8 +75,8 @@ word-wrap: break-word;
         <label>
           <input type="radio" name="searchType" value="walk"> Walk
         </label>
-        <p>Leaflet delivery is categorised as an 'input' for campaign informing purposes</p>
-        {% for tag, desc in leaflet_tags.items() %}
+        <p>Activity delivery is categorised as an 'input' for campaign measurement</p>
+        {% for tag, desc in activity_tags.items() %}
           <label for="street-input-{{ tag }}"><strong>{{ tag }}</strong>: {{ desc }}</label>
           <input type="text" id="street-input-{{ tag }}" placeholder="Search Street Name for {{ tag }}" oninput="filterLocations('{{ tag }}')">
           <ul id="street-results-{{ tag }}" class="results"></ul>
