--- a/static/style.css
+++ b/static/style.css
@@ -140,16 +140,7 @@ gap: 1rem;
   font-size: 1rem;
 }
 
-#datawin {
-	z-index: 12;
-	position: absolute;
-	bottom: 0;
-	left: 0;
-	height: 230px;
-	width: 1200px;
-	overflow: scroll;
-	background: white;
-}
+
 
 		#nav {
       z-index: 12;
@@ -495,10 +486,19 @@ tr:nth-child(even) {
   background-color: #dddddd;
 }
 
-
-#datawin #datawin  td:nth-child(2), #datawin  th:nth-child(2),#datawin  td:nth-child(3), #datawin  th:nth-child(3),#datawin  td:nth-child(4), #datawin  th:nth-child(4),#datawin  td:nth-child(5), #datawin  th:nth-child(5),
+#datawin {
+	z-index: 12;
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	height: 230px;
+	width: 1200px;
+	overflow: scroll;
+	background: white;
+}
+#datawin  td:nth-child(1), #datawin  th:nth-child(1),#datawin  td:nth-child(2), #datawin  th:nth-child(2),#datawin  td:nth-child(3), #datawin  th:nth-child(3),#datawin  td:nth-child(4), #datawin  th:nth-child(4),#datawin  td:nth-child(5), #datawin  th:nth-child(5),
 #datawin  td:nth-child(6), #datawin  th:nth-child(6),#datawin  td:nth-child(7), #datawin  th:nth-child(7),#datawin  td:nth-child(8), #datawin  th:nth-child(8),#datawin  td:nth-child(9), #datawin  th:nth-child(9),
-#datawin  td:nth-child(10), #datawin  th:nth-child(10),#datawin  td:nth-child(11), #datawin  th:nth-child(11),#datawin  td:nth-child(12), #datawin  th:nth-child(12),#datawin  td:nth-child(13), #datawin  th:nth-child(13),
+#datawin  td:nth-child(10), #datawin  th:nth-child(10),#datawin  td:nth-child(11), #datawin  th:nth-child(11),#datawin  td:nth-child(12), #datawin  th:nth-child(12),#datawin  td:nth-child(13), #datawin  th:nth-child(13),#datawin  td:nth-child(14), #datawin  th:nth-child(14)
  { /* 2-13 columns */
     width: 10px;
     min-width: 10px;
