--- a/templates/Dash0.html
+++ b/templates/Dash0.html
@@ -260,15 +260,15 @@
     <option value="{{ key }}">{{ value }}</option>
   {% endfor %}
   </select>
-
 </div>
 
-
 <div id="datawin" class="innertube">
-  <table id="captains-table">
-    <thead></thead>
-    <tbody style="height: 70px"></tbody>
-  </table>
+  <div style="overflow-x: auto; width: 100%; height: 100%;">
+    <table id="captains-table" style="width: 100%; table-layout: fixed;">
+      <thead></thead>
+      <tbody></tbody>
+    </table>
+  </div>
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.0/dist/chart.umd.min.js"></script>
@@ -357,7 +357,7 @@ function fetchTableData(tableName) {
         const cell = document.createElement("td");
         const value = record[header] !== undefined ? record[header] : "";
 
-        cell.textContent = value;
+        cell.innerHTML = value;
 
         // Highlight cell based on party
         if (selectedParty && header === selectedParty) {
@@ -465,7 +465,13 @@ function subending(filename, ending) {
   });
 
   document.getElementById("b9").addEventListener("click", function() {
-      changeIframeSrc("{{ url_for('telling') }}");
+    const mapfile = data.constants.territory;
+
+    if (mapfile) {
+      const calfile = subending(mapfile,"-CAL.html");
+      changeIframeSrc(`/thru/${calfile}`);
+      alert(`New calfile loaded: /thru/${calfile}`);
+    }
   });
 
 
